Add common and private libraries to CDI VisTest